added button with animation

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
     <title>Natours | Outdoors is where life happends</title>
 </head>
-
-<body>
     <header class="header">
         <div class="logo-box">
             <img src="img/logo-white.png" class="logo" alt="logo">
@@ -29,6 +27,8 @@
                     is where life happends
                 </span>
             </h1>
+
+            <a href="#" class="btn btn-white btn-animated">Discover more</a>
         </div>
     </header>
 
