--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <title>Natours | Outdoors is where life happends</title>
 </head>
     <header class="header">
-        <div class="logo-box">
-            <img src="img/logo-white.png" class="logo" alt="logo">
+        <div class="header__logo-box">
+            <img src="img/logo-white.png" class="header__logo" alt="logo">
         </div>
 
-        <div class="text-box">
+        <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">
+                <span class="heading-primary--main">
                     outdoors
                 </span>
-                <span class="heading-primary-sub">
+                <span class="heading-primary--sub">
                     is where life happends
                 </span>
             </h1>
 
-            <a href="#" class="btn btn-white btn-animated">Discover more</a>
+            <a href="#" class="btn btn--white btn--animated">
+                Discover more
+            </a>
         </div>
     </header>
 
