--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
         </div>
     </header>
 
-    <section class="grid-test">
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">
+                    Exicitng tours for you!
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">Text</div>
+                <div class="col-1-of-2">Image</div>    
+            </div>
+        </section>
+    </main>
+
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">Col 1 of 2</div>
             <div class="col-1-of-2">Col 1 of 2</div>    
@@ -56,6 +71,6 @@
             <div class="col-1-of-4">Col 1 of 4</div> 
             <div class="col-2-of-4">Col 2 of 4</div>  
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
