--- a/index.html
+++ b/index.html
@@ -36,14 +36,33 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exicitng tours for you!
                 </h2>
             </div>
 
             <div class="row">
-                <div class="col-1-of-2">Text</div>
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to faill in love with our tours
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magni ipsum, quis veritatis temporibus tempore, unde quisquam ullam possimus inventore exercitationem sed officia! Ex architecto est minus, nemo porro non?
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Go on adventures by testing the tours
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eaque sapiente obcaecati sed illum, voluptates in quibusdam animi qui aliquam nemo ad.
+                    </p>
+
+                    <a href="#" class="btn-text">
+                        Learn more &rarr;
+                    </a>
+                </div>
+
                 <div class="col-1-of-2">Image</div>    
             </div>
         </section>
