created story section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,29 @@
             <div class="u-center-text u-margin-top-huge">
                 <a href="#" class="btn btn--green">Discover our tours</a>
             </div>
+        </section>
 
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We can create happyness
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Im on a boat" class="story__img">
+                    </figure>
+    
+                    <div class="story__text">
+                        <h3 class="heading-tretiary u-margin-bottom-small">
+                            I had the best time ever, lol
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus, ea quo veritatis voluptas ad aperiam natus. Perspiciatis ea provident eligendi suscipit, Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
