added one more row with reviews' '

--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Im on a boat" class="story__img">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
     
                     <div class="story__text">
@@ -267,6 +270,30 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus, ea quo veritatis voluptas ad aperiam natus. Perspiciatis ea provident eligendi suscipit, Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus.</p>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Im on a mountain" class="story__img">
+                        <figcaption class="story__caption">
+                            Oaklay Bendover
+                        </figcaption>
+                    </figure>
+    
+                    <div class="story__text">
+                        <h3 class="heading-tretiary u-margin-bottom-small">
+                            Yeah it was awesome
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus, ea quo veritatis voluptas ad aperiam natus. Perspiciatis ea provident eligendi suscipit, Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur saepe possimus.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">
+                    Read more &rarr;
+                </a>
             </div>
         </section>
     </main>
