--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
         </section>
 
         <section class="section-stories">
+            <div class="bg-video">
+                <video class="video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                        Your browser does not support a video background
+                </video>
+            </div>
+
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We can create happyness
@@ -296,6 +304,32 @@
                 </a>
             </div>
         </section>
+
+        <div class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Create happiness
+                                </h2>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" id="name" class="form__input" placeholder="Full Name" required>
+                                <label for="name" class="for__input">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" id="email" class="form__input" placeholder="Full Name" required>
+                                <label for="email" class="for__input">Email Address</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- <section class="grid-test">
