--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
 
                             <div class="form__group">
                                 <input type="text" id="name" class="form__input" placeholder="Full Name" required>
-                                <label for="name" class="for__input">Full Name</label>
+                                <label for="name" class="form__label">Full Name</label>
                             </div>
 
                             <div class="form__group">
                                 <input type="email" id="email" class="form__input" placeholder="Full Name" required>
-                                <label for="email" class="for__input">Email Address</label>
+                                <label for="email" class="form__label">Email Address</label>
                             </div>
                         </form>
                     </div>
