added footer block

--- a/index.html
+++ b/index.html
@@ -356,28 +356,52 @@
         </div>
     </main>
 
-    <!-- <section class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">Col 1 of 2</div>
-            <div class="col-1-of-2">Col 1 of 2</div>    
+    <footer class="footer">
+        <div class="footer__logo-box u-margin-bottom-medium">
+            <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
         </div>
 
         <div class="row">
-            <div class="col-1-of-3">Col 1 of 3</div> 
-            <div class="col-1-of-3">Col 1 of 3</div> 
-            <div class="col-1-of-3">Col 1 of 3</div>  
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer_list">
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__link">
+                                Company
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__link">
+                                Contact Us
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__link">
+                                Carrers
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__link">
+                                Privacy Policy
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="#" class="footer__link">
+                                Terms
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by <a href="#" class="footer__link">
+                        Pär J &copy;
+                    </a>
+                    using the advanced CSS udemy course by Jonas Schmidth, all material is Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias at autem deleniti debitis totam distinctio quod temporibus esse asperiores labore quo, molestiae quae eius fugiat vero ex tempore aperiam pariatur.
+                </p>
+            </div>
         </div>
-
-        <div class="row">
-            <div class="col-1-of-3">Col 1 of 3</div> 
-            <div class="col-2-of-3">Col 2 of 3</div> 
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">Col 1 of 4</div> 
-            <div class="col-1-of-4">Col 1 of 4</div> 
-            <div class="col-2-of-4">Col 2 of 4</div>  
-        </div>
-    </section> -->
+    </footer>
 </body>
 </html>
