--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
 
     <title>Natours | Outdoors is where life happends</title>
 </head>
+    <body>
+
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <label for="navi-toggle" class=navigation__button>MENU</label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <div class="navigation__item"><a href="#" class="navigation__link">01 About Natous</a></div>
+                    <div class="navigation__item"><a href="#" class="navigation__link">02 Your benefits</a></div>
+                    <div class="navigation__item"><a href="#" class="navigation__link">03 Popular tours</a></div>
+                    <div class="navigation__item"><a href="#" class="navigation__link">04 Stories</a></div>
+                    <div class="navigation__item"><a href="#" class="navigation__link">05 Book now</a></div>
+                </ul>
+            </nav>
+        </div>
+
+
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" class="header__logo" alt="logo">
