--- a/index.html
+++ b/index.html
@@ -425,5 +425,12 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            POP
+        </div>
+    </div>
+
 </body>
 </html>
