added popup for cards

--- a/index.html
+++ b/index.html
@@ -428,7 +428,19 @@
 
     <div class="popup">
         <div class="popup__content">
-            POP
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="nature photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="nature photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h2>
+                <h3 class="heading-tretiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+
+                <p class="popup__text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, modi quo. Necessitatibus beatae rem fuga debitis, maxime omnis tenetur tempora? Deserunt incidunt debitis perferendis unde accusantium repellendus soluta distinctio omnis!
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
         </div>
     </div>
 
