--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">
+            <a href="#section-tours" class="btn btn--white btn--animated">
                 Discover more
             </a>
         </div>
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -184,7 +184,7 @@
                                     <p class="card__price-value">
                                         $329
                                     </p>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                     <p class="card__price-value">
                                         $999
                                     </p>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +256,7 @@
                                     <p class="card__price-value">
                                         $1690
                                     </p>
-                                    <a href="#" class="btn btn--white">Book now</a>
+                                    <a href="#popup" class="btn btn--white">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -426,13 +426,14 @@
         </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img src="img/nat-8.jpg" alt="nature photo" class="popup__img">
                 <img src="img/nat-9.jpg" alt="nature photo" class="popup__img">
             </div>
             <div class="popup__right">
+                <a class="popup__close" href="#section-tours">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h2>
                 <h3 class="heading-tretiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
 
