--- a/index.html
+++ b/index.html
@@ -87,9 +87,36 @@
 
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="Nature 1" class="composition__photo composition__photo--p1">
-                        <img src="img/nat-2-large.jpg" alt="Nature 2" class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="Nature 3" class="composition__photo composition__photo--p3">
+
+                        <img 
+                        src="img/nat-1-large.jpg" 
+                        alt="Nature 1" 
+                        srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        class="composition__photo composition__photo--p1"
+                        >
+
+                        <img 
+                        src="img/nat-2-large.jpg" 
+                        alt="Nature 2" 
+                        srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        class="composition__photo composition__photo--p2"
+                        >
+
+                        <img 
+                        src="img/nat-3-large.jpg" 
+                        alt="Nature 3" 
+                        srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        class="composition__photo composition__photo--p3"
+                        >
+
+                        <!-- 
+                            <img src="img/nat-1-large.jpg" alt="Nature 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Nature 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Nature 3" class="composition__photo composition__photo--p3"> 
+                        -->
                     </div>
                 </div>    
             </div>
@@ -380,7 +407,19 @@
 
     <footer class="footer">
         <div class="footer__logo-box u-margin-bottom-medium">
-            <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            <!-- Using picture sizing "Art Direction" -->
+            <picture class="footer__logo">
+                <source 
+                    srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" 
+                    media="(max-width: 37.5em)"
+                >
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="full logo">
+            </picture>
+
+            <!-- 
+                Using srcset
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="full logo"> 
+            -->
         </div>
 
         <div class="row">
